--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="envelope"></div>
             <div class="front"></div>
             <div class="card">
-                <div class="text">Happy Valentine's </br> "isel"</br> sana mag cb na kayo ni</div>
+                <div class="text">Happy Valentine's </br> PO </br> sana mag hiwalay kayo char </div>
                 <div class="heart"></div>
             </div>
         </div>
