--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="envelope"></div>
             <div class="front"></div>
             <div class="card">
-                <div class="text">Happy Valentine's </br> po! </br>  </div>
+                <div class="text">Happy Valentine's</br> po!</div>
                 <div class="heart"></div>
             </div>
         </div>
